--- a/templates/time-queue.hbs
+++ b/templates/time-queue.hbs
@@ -1,6 +1,5 @@
-<div class="queue-container" style="position: relative; width: 100%; height: 100%;">
-    {{#each items}}
-    <div class="queue-item" style="left: {{this.cssLeft}};" data-id="{{this.id}}">
+<div class="queue-container" style="position: relative; width: 100%; height: 100%; background: rgba(255,0,0,0.2);"> {{#each items}}
+    <div class="queue-item" style="left: {{this.cssLeft}};" data-id="{{this.uuid}}">
         <img src="{{this.img}}" title="{{this.name}}" />
         <span class="name-tag" style="font-size: 10px; color: #e99d76;">{{this.name}}</span>
     </div>
